--- a/src/Plugin.InAppBilling/Plugin.InAppBilling.Classic.csproj
+++ b/src/Plugin.InAppBilling/Plugin.InAppBilling.Classic.csproj
@@ -6,9 +6,9 @@
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <AssemblyFileVersion>1.0.0.0</AssemblyFileVersion>
-    <Version>5.6.2</Version>
+    <Version>5.6.3</Version>
     <LangVersion>9.0</LangVersion>
-    <Authors>James Montemagno</Authors>
+    <Authors>James Montemagno; Eric Lira</Authors>
     <PackageId>Plugin.InAppBilling</PackageId>
     <PackOnBuild>true</PackOnBuild>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
